--- a/To-Do-list/index.html
+++ b/To-Do-list/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;1,200;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List </title>
 </head>
@@ -13,10 +17,11 @@
     </header>
     <form >
         <input type="text" id="to-do-input" class="input text">
-        <button id="btn" class="btn btn-sub">Ajouter</button>
+        <button id="btn"><i class="fas fa-plus-square"></i></button>
     </form>
     <ul id="listTodo" class="list-toDo">
 
     </ul>
+    <script src="javascript.js"></script>
 </body>
 </html>
