setup javascrit code

--- a/To-Do-list/index.html
+++ b/To-Do-list/index.html
@@ -16,12 +16,15 @@
         <h1> To do</h1>
     </header>
     <form >
-        <input type="text" id="to-do-input" class="input text">
-        <button id="btn"><i class="fas fa-plus-square"></i></button>
+        <input type="text" id="to-do-input" >
+        <button id="btnTodo"><i class="fas fa-plus-square"></i></button>
     </form>
-    <ul id="listTodo" class="list-toDo">
+    <div class="container">
+        <ul id="listTodo" class="list-toDo">
 
-    </ul>
+        </ul>
+    </div>
+    
     <script src="javascript.js"></script>
 </body>
 </html>
